[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/projet jeu  copy/doggystilG.png" type="Texture" id=1]
[ext_resource path="res://src/pers/Player.gd" type="Script" id=2]
[ext_resource path="res://assets/projet jeu  copy/dogcourir2.png" type="Texture" id=3]
[ext_resource path="res://assets/sfx/fullwalk.wav" type="AudioStream" id=4]
[ext_resource path="res://assets/sfx/Jump .wav" type="AudioStream" id=5]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": false,
"name": "static",
"speed": 0.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 1 ), ExtResource( 3 ), ExtResource( 1 ) ],
"loop": true,
"name": "courir",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 32, 40 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 35, 49 )

[sub_resource type="Animation" id=4]
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=5]
length = 0.9
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.8 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "queue_free"
} ]
}

[node name="Player" type="KinematicBody2D"]
collision_mask = 8
script = ExtResource( 2 )
speed = Vector2( 300, 500 )
gravity = 780.0

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 8, 19 )
scale = Vector2( 3.12857, 3.51429 )
frames = SubResource( 1 )
animation = "static"
speed_scale = 0.6
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 9, 19 )
shape = SubResource( 2 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 0, -172 )
offset = Vector2( 0, 100 )
current = true
limit_left = 0
limit_top = 0
limit_smoothed = true
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = true
smoothing_speed = 8.0
drag_margin_left = 0.19
drag_margin_top = 0.45
drag_margin_right = 0.11

[node name="OppsZone" type="Area2D" parent="."]
position = Vector2( 9, 79 )
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="OppsZone"]
visible = false
modulate = Color( 0.678431, 0.00392157, 0.607843, 1 )
position = Vector2( 0, -60 )
shape = SubResource( 3 )

[node name="OppsZone2" type="Area2D" parent="."]
position = Vector2( 9, 79 )
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="OppsZone2"]
visible = false
modulate = Color( 0.678431, 0.00392157, 0.607843, 1 )
position = Vector2( 0, -60 )
shape = SubResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "DefaultStart"
anims/DefaultStart = SubResource( 4 )
anims/Dying = SubResource( 5 )

[node name="audioPlayer" type="Node" parent="."]

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer" parent="audioPlayer"]
stream = ExtResource( 4 )
volume_db = 2.942

[node name="SoundJump" type="AudioStreamPlayer" parent="audioPlayer"]
stream = ExtResource( 5 )
volume_db = 1.425
pitch_scale = 0.98
[connection signal="area_entered" from="OppsZone" to="." method="_on_OppsZone_area_entered"]
[connection signal="body_entered" from="OppsZone" to="." method="_on_OppsZone_body_entered"]
[connection signal="area_entered" from="OppsZone2" to="." method="_on_OppsZone2_area_entered"]
[connection signal="body_entered" from="OppsZone2" to="." method="_on_OppsZone2_body_entered"]
